[project]
name = "netboxlabs-diode-sdk"
version = "0.0.1"  # Overwritten during the build process
description = "NetBox Labs, Diode SDK"
readme = "README.md" # Optional
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "NetBox Labs", email = "support@netboxlabs.com" } # Optional
]
maintainers = [
    {name = "NetBox Labs", email = "support@netboxlabs.com" } # Optional
]

classifiers = [  # Optional
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

dependencies = [
    "certifi==2024.2.2",
    "grpcio==1.62.1",
    "grpcio-status==1.62.1",
    "sentry-sdk>=2.2.1",
]

[project.optional-dependencies] # Optional
dev = ["black", "check-manifest", "ruff"]
test = ["coverage", "pytest", "pytest-cov"]

[project.urls]  # Optional
"Homepage" = "https://netboxlabs.com/"

[project.scripts]  # Optional

[tool.setuptools]
packages = [
    "netboxlabs.diode.sdk",
    "netboxlabs.diode.sdk.diode",
    "netboxlabs.diode.sdk.diode.v1",
    "netboxlabs.diode.sdk.validate",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 140
exclude = [
    "netboxlabs/diode/sdk/diode/*",
    "netboxlabs/diode/sdk/validate/*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["C", "D", "E", "F", "I", "R", "UP", "W"]
ignore = ["F401", "D203", "D212", "D400", "D401", "D404", "RET504"]
